[project]
name = "omniassist"
version = "1.0.0"
description = "AI-Powered Multi-Agent Conversational Platform built on LangGraph + Groq"
requires-python = ">=3.11"
dependencies = [
    # Core LangGraph
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-groq>=0.2",
    "langchain-community>=0.3",

    # Checkpointing
    "langgraph-checkpoint-sqlite>=2.0",

    # Tools & Data
    "tavily-python>=0.5",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
